--- a/css/basic/jquery.tag-editor.css
+++ b/css/basic/jquery.tag-editor.css
@@ -2,13 +2,15 @@
 .tag-editor {
     list-style-type: none;
     padding: 0 5px 0 0;
-    margin: 0;
+    margin: 10px 10px 0 10px;
     overflow: hidden;
     border: 1px solid #eee;
+    border-radius: 3px;
     cursor: text;
     font: normal 14px sans-serif;
     color: #555;
     background: #fff;
+    min-height: 100px;
 }
 
 /* core styles usually need no change */
