--- a/css/basic/tree.css
+++ b/css/basic/tree.css
@@ -11,6 +11,12 @@
     /*-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);*/
     /*box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05)*/
     z-index: 100;
+
+    display: flex;
+}
+
+.tree i {
+    color: #6fb7b7;
 }
 
 .tree li {
