--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -66,7 +66,7 @@
 }
 
 .TargetMin > h3, .TargetMax > h3 {
-    width: 60px;
+    width: 80px;
 }
 
 .KpiDescription {
@@ -87,7 +87,7 @@
 }
 
 .Kpis > table > tbody > tr > td > h5 {
-    margin-top: -20px;
+    margin: -20px 0 0 0;
     color: #ccc;
     text-align: center;
 }
