--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -39,6 +39,10 @@
     width: 100px;
 }
 
+.IsClick {
+    background: white;
+}
+
 /*Here is the Content CSS*/
 .RightContent {
     position: absolute;
@@ -97,6 +101,11 @@
 }
 
 .Follow {
-    margin: 20px 0 0 0;
+    margin: 0 0 0 0;
+    min-width: 80px;
+}
+
+.Manage {
+    margin: 5px 0 -20px 0;
     min-width: 80px;
 }
