--- a/css/basic/basic.css
+++ b/css/basic/basic.css
@@ -19,6 +19,7 @@
     height: 34px;
     font-weight: bold;
     border-radius: 3px;
+    font-size: 1em;
     border: 2px solid green;
     background: transparent;
     margin: 20px 15px 0 0;
