--- a/css/department.css
+++ b/css/department.css
@@ -57,6 +57,7 @@
 
 .BasicInfo > button {
     margin: 10px 0 0 20px;
+    width: 70px;
 }
 
 .Change:hover {
@@ -135,6 +136,11 @@
 .AddUsers {
     margin: 20px 50px 0 50px;
     width: 100px;
+    font-size: 13px;
+}
+
+.AddUsers:hover {
+    font-size: 13px;
 }
 
 .DepartmentMembers > hr {
