--- a/css/nav.css
+++ b/css/nav.css
@@ -288,17 +288,13 @@ ul > li > a {
 
 .TaskItem > button {
     margin: 20px 0 0 10px;
-}
-
-.BtnSubmit {
-    font-size: .4em;
+    font-size: 12px;
     height: 30px;
-    margin: -5px 0 0 0;
     width: 65px;
 }
 
-.BtnSubmit:active {
-    font-size: .5em;
+.TaskItem > button:active {
+    font-size: 10px;
 }
 
 .nkcmanagement {
