--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -113,3 +113,282 @@
     margin: 5px 0 -20px 0;
     min-width: 80px;
 }
+
+.modal-header {
+    text-align: center;
+}
+
+.modal-body {
+    height: 310px;
+}
+
+.modal-footer {
+    padding: 5px 20px 20px 0;
+}
+
+.row {
+    margin-top: 10px;
+}
+
+.SelectCls {
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    width: 100%;
+    height: 34px;
+    padding: 0 14px 0 6px;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background: url(../images/selectarrow.png) no-repeat scroll right center transparent;
+}
+
+.SelectCls option {
+    height: 34px;
+    line-height: 34px;
+    padding-top: 8px;
+    border-radius: 3px;
+}
+
+.tag-editor {
+    margin: 0;
+    border: 1px solid #ccc;
+}
+
+.col-md-6 > textarea {
+    resize: none;
+    border-radius: 3px;
+    box-shadow: none;
+    border: 1px solid #ccc;
+    padding: 6px 12px;
+}
+
+.modal-body > hr {
+    margin: 0;
+}
+
+.col-md-4 {
+    text-align: center;
+}
+
+.BasicHeader, .AssignToHeader, .ViewableHeader {
+    margin: -25px 0 0 0;
+}
+
+.BasicHeader {
+    border-bottom: 4px solid lightseagreen;
+}
+
+.BasicHeader > h4 {
+    color: #FFA500;
+}
+
+.Finish {
+    background: darkgreen;
+    color: white;
+    border: none;
+}
+
+.Finish:hover {
+    background: lightseagreen;
+}
+
+.basic-info {
+    display: block;
+}
+
+.tag-editor {
+    min-height: 70px;
+}
+
+.AddDimentionBtn {
+    display: flex;
+}
+
+.AddDimensions > hr {
+    margin: 10px 0 15px 0;
+}
+
+.AddDimentionBtn > span {
+    color: #9d9d9d;
+    margin-left: 90px;
+}
+
+.AddDimentionBtn > i {
+    margin-left: 4px;
+    color: lightseagreen;
+    cursor: pointer;
+}
+
+.AddDimensions {
+    background: white;
+    height: 200px;
+    position: absolute;
+    right: 180px;
+    top: 315px;
+    width: 200px;
+    border-radius: 3px;
+    text-align: center;
+    display: none;
+}
+
+.AddDimensions > input[type='text'] {
+    width: 90%;
+    margin-left: 10px;
+    margin-top: -5px;
+}
+
+.AddDimensions > select {
+    width: 90%;
+    margin-top: 10px;
+}
+
+.AddDimensions > button {
+    margin-left: 18px;
+    margin-top: 10px;
+}
+
+.assign-to, .viewable {
+    margin-top: 30px;
+    display: none;
+}
+
+.WarningAlert {
+    margin: -20px 0 0 0;
+}
+
+.UsersIcon {
+    margin: 8px 0 0 -10px;
+    color: darkcyan;
+    cursor: pointer;
+    display: none;
+}
+
+.UsersIcon:hover {
+    color: darkred;
+}
+
+.ViewMsgShow > span > input[type='radio'] {
+    outline: none;
+}
+
+.ViewMsgShow > input[type='text'] {
+    background: white;
+}
+
+.ViewMsgShow > input:focus {
+    border-color: #ccc;
+    box-shadow: none;
+}
+
+.publicChoose, .specificChoose {
+    cursor: pointer;
+}
+
+.ChooseNav, .NewGroup {
+    position: absolute;
+    right: 179px;
+    top: 30px;
+    width: 200px;
+    height: 490px;
+    background: white;
+    border-radius: 3px;
+    display: none;
+}
+
+.CheckBox {
+    margin: 20px 0 0 20px;
+    top: -10px;
+}
+
+.ChooseNav > hr, .NewGroup > hr {
+    margin: 2px 0 0 0;
+}
+
+.CloseCheckBox, .CloseAddGroup, .CloseGroupUserList, .CloseDimension {
+    display: flex;
+    text-align: center;
+}
+
+.CloseAddGroup > h4, .AddGroupUsers > h4, .CloseCheckBox > h4, .CloseGroupUserList > h4, .CloseDimension > h4 {
+    position: relative;
+    left: 40px;
+    top: 10px;
+}
+
+.CloseGroupUserList > h4 {
+    left: 50px;
+}
+
+.CloseDimension > h4 {
+    left: 60px;
+}
+
+.NewGroup > h4 {
+    top: 0;
+}
+
+.CloseCheckBox > i, .CloseAddGroup > i, .AddGroupUsers > i, .CloseGroupUserList > i, .CloseDimension > i {
+    position: absolute;
+    right: 4px;
+    color: #cccccc;
+    cursor: pointer;
+}
+
+.AddGroupUsers > i {
+    left: 150px;
+    top: 105px;
+}
+
+.NewGroupBtn {
+    position: relative;
+    left: 25px;
+    width: 150px;
+}
+
+.GroupName {
+    width: 80%;
+    margin: 10px 0 0 20px;
+}
+
+.GroupUsers {
+    text-align: center;
+    height: 277px;
+    overflow-y: auto;
+    margin-top: 25px;
+}
+
+.GroupUsers > ul > li, .GroupUserList > ul > li, .List > ul > li {
+    border-bottom: 1px solid #ccc;
+    margin: 0 0 0 -40px;
+    text-align: left;
+    height: 30px;
+    padding: 5px 0 0 20px;
+    cursor: pointer;
+}
+
+.GroupUsers > ul > li:first-child {
+    border-top: 1px solid #ccc;
+}
+
+.OKUsers {
+    position: absolute;
+    left: 50px;
+}
+
+.GroupUserList {
+    position: absolute;
+    right: 0;
+    height: 490px;
+    background: white;
+    top: 30px;
+    width: 175px;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.List {
+    height: 360px;
+    overflow-y: auto;
+    margin: 10px 0 0 0;
+}
