--- a/css/basic/basic.css
+++ b/css/basic/basic.css
@@ -41,3 +41,50 @@
     background: lightseagreen;
     color: white;
 }
+
+/* .CheckBox */
+.CheckBox {
+    width: 20px;
+    position: relative;
+    display: flex;
+}
+
+.CheckBox label {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    border-radius: 3px;
+    border: 2px solid lightseagreen;
+}
+
+.CheckBox label:after {
+    content: '';
+    width: 16px;
+    height: 8px;
+    position: absolute;
+    top: 1px;
+    left: 0;
+    border: 2px solid red;
+    border-top: none;
+    border-right: none;
+    background: transparent;
+    opacity: 0;
+    transform: rotate(-45deg);
+}
+
+.CheckBox input[type=checkbox]:checked + label:after {
+    opacity: 1;
+}
+
+.CheckBox p {
+    width: 50px;
+    position: absolute;
+    top: 0;
+    left: 30px;
+}
+
+/* end .CheckBox */
