--- a/css/basic/basic.css
+++ b/css/basic/basic.css
@@ -81,6 +81,10 @@
     margin: 5px 0 0 20px;
 }
 
+.CheckBox > input[type='checkbox'] {
+    margin: 5px 0 0 20px;
+}
+
 .CheckBox input[type=checkbox]:checked + label:after {
     opacity: 1;
 }
