--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -394,6 +394,7 @@
     border-radius: 3px;
     text-align: center;
     display: none;
+    right: 0;
 }
 
 .ShowChoosedGroup, .ShowNotChoosedGroup {
