--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -57,7 +57,7 @@
 .Kpis {
     height: 90px;
     border-radius: 3px;
-    border: 1px solid #e0e0e0;
+    border: 1px solid lightseagreen;
     margin: 10px 0 0 0;
     display: flex;
     line-height: 90px;
