--- a/css/managekpi.css
+++ b/css/managekpi.css
@@ -57,7 +57,7 @@
     height: 100px;
     display: flex;
     padding-right: 0;
-    margin: 20px 30px 0 30px;
+    margin: 20px 30px 0 0;
 }
 
 .AssignInfo > hr {
