--- a/css/managekpi.css
+++ b/css/managekpi.css
@@ -50,7 +50,7 @@
     margin-left: 270px;
 }
 
-.AssignToWho {
+.ManualAssignToWho {
     min-width: 300px;
     border-radius: 3px;
     border: 1px solid lightblue;
