--- a/css/managekpi.css
+++ b/css/managekpi.css
@@ -33,6 +33,7 @@
     width: 200px;
     text-align: right;
     margin-right: 20px;
+    margin-top: 0   ;
 }
 
 .NameAndInput > input, .SelectCls {
