--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -118,9 +118,9 @@
     text-align: center;
 }
 
-.modal-body {
+/*.modal-body {
     height: 310px;
-}
+}*/
 
 .modal-footer {
     padding: 5px 20px 20px 0;
@@ -265,7 +265,7 @@
     margin: -20px 0 0 0;
 }
 
-.UsersIcon {
+.UsersIcon, .ManualUsersIcon {
     margin: 8px 0 0 -10px;
     color: darkcyan;
     cursor: pointer;
@@ -316,18 +316,18 @@
     margin: 2px 0 0 0;
 }
 
-.CloseCheckBox, .CloseAddGroup, .CloseGroupUserList, .CloseAssignUserList, .CloseDimension {
+.CloseCheckBox, .CloseAddGroup, .CloseGroupUserList, .CloseAssignUserList, .CloseDimension, .ManualCloseAssignUserList {
     display: flex;
     text-align: center;
 }
 
-.CloseAddGroup > h4, .AddGroupUsers > h4, .CloseCheckBox > h4, .CloseAssignUserList > h4, .CloseGroupUserList > h4, .CloseDimension > h4 {
+.CloseAddGroup > h4, .AddGroupUsers > h4, .CloseCheckBox > h4, .CloseAssignUserList > h4, .CloseGroupUserList > h4, .CloseDimension > h4, .ManualCloseAssignUserList > h4 {
     position: relative;
     left: 40px;
     top: 10px;
 }
 
-.CloseGroupUserList > h4, .CloseAssignUserList > h4 {
+.CloseGroupUserList > h4, .CloseAssignUserList > h4, .ManualCloseAssignUserList > h4 {
     left: 30px;
 }
 
@@ -339,7 +339,7 @@
     top: 0;
 }
 
-.CloseCheckBox > i, .CloseAddGroup > i, .AddGroupUsers > i, .CloseGroupUserList > i, .CloseAssignUserList > i, .CloseDimension > i {
+.CloseCheckBox > i, .CloseAddGroup > i, .AddGroupUsers > i, .CloseGroupUserList > i, .CloseAssignUserList > i, .CloseDimension > i, .ManualCloseAssignUserList > i {
     position: absolute;
     right: 4px;
     color: #cccccc;
@@ -372,7 +372,7 @@
     width: 200px;
 }
 
-.GroupUsers > ul > li, .GroupUserList > ul > li, .AssignUserList > ul > li, .List > ul > li, .GroupList > ul > li {
+.GroupUsers > ul > li, .GroupUserList > ul > li, .AssignUserList > ul > li, .List > ul > li, .GroupList > ul > li, .ManualAssignUserList > ul > li, .ManualList > ul > li {
     border-bottom: 1px solid #ccc;
     margin: 0 0 0 -40px;
     text-align: left;
@@ -390,7 +390,7 @@
     top: 410px;
 }
 
-.GroupUserList, .AssignUserList {
+.GroupUserList, .AssignUserList, .ManualAssignUserList {
     position: absolute;
     height: 485px;
     background: white;
@@ -402,14 +402,19 @@
     right: 0;
 }
 
-.ShowChoosedGroup, .ShowNotChoosedGroup {
+.ManualAssignUserList {
+    top: 220px;
+    z-index: 2000;
+}
+
+.ShowChoosedGroup, .ShowNotChoosedGroup, .SMCGroup, .SMNCGroup {
     width: 100px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 
-.List, .GroupList {
+.List, .GroupList, .ManualList {
     height: 390px;
     overflow-y: auto;
     margin: 10px 0 0 0;
