--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -490,11 +490,7 @@
     min-width: 300px;
 }
 
-.AddDimensionsTagName {
-    margin: 20px 0 0 0;
-}
-
-.AddDimensionsTagType {
+.AddDimensionsTagName, .AddDimensionsTagType {
     margin: 20px 0 0 0;
 }
 
