--- a/css/KPIManagement.css
+++ b/css/KPIManagement.css
@@ -118,9 +118,9 @@
     text-align: center;
 }
 
-/*.modal-body {
+.modal-body {
     height: 310px;
-}*/
+}
 
 .modal-footer {
     padding: 5px 20px 20px 0;
