--- a/css/managekpi.css
+++ b/css/managekpi.css
@@ -163,3 +163,12 @@
     margin: 12px 0 0 12px;
     color: lightseagreen
 }
+
+.ShowViewableGroups {
+    display: none;
+    height: 100px;
+    border: 2px solid lightblue;
+    border-radius: 3px;
+    margin: -20px 0 0 17px;
+    overflow-y: auto;
+}
